# llm-sync-drive

./: .gitignore  .llmsignore.example  LICENSE  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
site/: astro.config.mjs  package-lock.json  package.json
site/src/: site-config.ts
site/src/content/docs/handbook/: configuration.md  getting-started.md  index.md  mcp-server.md  security.md  usage.md
site/src/styles/: starlight-custom.css
src/llm_sync_drive/: __init__.py  __main__.py  compiler.py  config.py  drive.py  ignore.py  server.py  sync.py  watcher.py
tests/: test_compiler.py  test_config.py  test_drive.py  test_ignore.py  test_sync.py
